--- a/.github/ISSUE_TEMPLATE/new_challenge_issue.yaml
+++ b/.github/ISSUE_TEMPLATE/new_challenge_issue.yaml
@@ -1,7 +1,7 @@
 name: New Challenge Issue
 description: LeetCode-Grind
 title: "[New Issue]: "
-labels: 'hacktoberfest'
+labels: 'new-challenge'
 body:
   - type: markdown
     attributes:
